--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "update:csi": "node scripts/process-csi-data.js"
+    "update:csi": "node scripts/process-csi-data.js",
+    "inspis:build-data": "node scripts/import-inspis-data.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
