Enhance ETL mapping and add weekly CSI/InspIS refresh automations

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,10 @@ next-env.d.ts
 !/data/inspection_extractions.json
 !/data/inspis_school_profiles.json
 !/data/inspis_coverage_summary.json
+!/data/csi_manifest.json
+!/data/csi_diff_latest.json
+!/data/csi_snapshots/
+!/data/csi_snapshots/*.json
 
 # TT Decoder outputs (large binary/generated files)
 /data/decoded_tt*/
