--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/generate-sitemap.js && next build",
     "start": "next start",
     "lint": "eslint",
     "update:csi": "node scripts/process-csi-data.js",
-    "inspis:build-data": "node scripts/import-inspis-data.js"
+    "inspis:build-data": "node scripts/import-inspis-data.js",
+    "sitemap:build": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -16,6 +17,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@vercel/analytics": "^1.6.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
